--- a/state_groups.Rmd
+++ b/state_groups.Rmd
@@ -119,21 +119,21 @@ ggplot(data = seq_final, aes(x = group, y = mutations, fill = group)) +
         ylab("Nucleotide Distance from Root")
 
 ggplot(data = us_dates, aes(x = date, y = group, fill = group)) +
-  geom_density_ridges(stat = "binline", bins = 20, scale = 0.95) +
+  geom_density_ridges(stat = "binline", bins = 20, scale = 0.5) +
   scale_fill_brewer(palette="Accent") +
-        geom_jitter(position=position_jitter(0.1), size = 0.5, alpha = 0.3) +
+        geom_jitter(position=position_jitter(0.04), size = 0.5, alpha = 0.3) +
         xlab("Date of Isolation") +
         ylab("Sequence Density")
   
-'''
 ggplot(data = us_dates, aes(x = date, y = group, fill = group)) +
-geom_density_ridges(jittered_points = TRUE,
-    position = position_points_jitter(width = 0.05, height = 0),
-    point_shape = '^', point_size = 3, point_alpha = 1, alpha = 0.5) +
-    scale_fill_brewer(palette="Accent") +
+  geom_density_ridges( scale = 1,
+    aes(point_color = group, point_fill = group),
+    alpha = 0.01, point_alpha = 0.5, jittered_points = TRUE
+  )+
+  scale_point_color_hue(l = 20) +
+  #scale_discrete_manual(aesthetics = "point_shape", values = c(21, 22, 23))
         xlab("Date of Isolation") +
-        ylab("Sequenced Density")
-'''
+        ylab("Sequence Density")
 
 #graph of nucleotide differences from the root for mutation calculator
 
