--- a/state_groups.Rmd
+++ b/state_groups.Rmd
@@ -16,23 +16,23 @@ suppressPackageStartupMessages(library(stringr))
 suppressPackageStartupMessages(library(sf))
 suppressPackageStartupMessages(library(leaflet))
 suppressPackageStartupMessages(library(rgdal))
-library(raster)
-library(tmap)
-library(RColorBrewer)
-library(dplyr)
-library(lubridate)
-library(ggridges)
+suppressPackageStartupMessages(library(raster))
+suppressPackageStartupMessages(library(tmap))
+suppressPackageStartupMessages(library(RColorBrewer))
+suppressPackageStartupMessages(library(dplyr))
+suppressPackageStartupMessages(library(lubridate))
+suppressPackageStartupMessages(library(ggridges))
 
 ```
 
 #
 ```{r message=FALSE, warning=FALSE, , echo=FALSE}
 
-#input metadata table for each tree
+#input metadata table for master tree with 900+ sequences from abroad and the US
 
 metadata_0 <- read.delim("C:/Users/Andrew/Dropbox/masters_project/initial_maps/metadata_0.tab")
 
-
+#Define US State groupings
 NE <- list("Connecticut", "Maine", "Massachusetts", "New Hampshire", "Rhode Island", "Vermont", "New Jersey","New York", "Pennsylvania")
 
 MW <- list("Illinois", "Indiana", "Michigan", "Ohio", "Wisconsin","Iowa", "Kansas", "Minnesota", "Missouri", "Nebraska", "North Dakota", "South Dakota")
@@ -43,8 +43,10 @@ WT <- list("Arizona", "Colorado", "Idaho", "Montana", "Nevada", "New Mexico", "U
 
 rep_gov <- list("Alaska", "Arizona", "Arkansas", "Florida", "Georgia", "Idaho", "Indiana", "Iowa", "Massachusetts", "Maryland", "Mississippi", "Missouri", "Nebraska", "New Hampshire", "North Dakota", "Ohio", "Oklahoma", "South Carolina", "South Dakota", "Tennessee", "Texas", "Utah", "Vermont", "West Virginia", "Wyoming")
 
+#Amend government political group column
 metadata_0$gov <- ifelse(is.element(metadata_0$state, rep_gov) , "Republican","Democrat")
 
+#Amend state grouping column
 metadata_0$group <- ifelse(is.element(metadata_0$state, NE) , "Northeast",
                            ifelse(is.element(metadata_0$state, MW) , "Midwest",
                                   ifelse(is.element(metadata_0$state, SO) , "South",
@@ -60,16 +62,20 @@ length(MW)
 length(SO)
 length(WT)
 
+#export new metadata table
 write.table(metadata_0, file = "group_metadata_0.tab", sep ="\t", row.names = FALSE)
 
+#using stringr to add county data 
 meta_sep <-str_split_fixed(metadata_0$location, " / ", 4)
 
 meta_sep <- as.data.frame(meta_sep)
 
+#define what is a New York State
 meta_sep$V5 <- ifelse(meta_sep$V3 == "New York" ,as.character(meta_sep$V4), "outside_NY")
 
 meta_sep <- bind_cols(meta_sep, metadata_0, by = NULL)
 
+#Mutate new column with either group name of New York County name
 meta_sep$county <- ifelse(meta_sep$V3 == "New York" ,as.character(meta_sep$V4),
                           as.character(meta_sep$group))
 
@@ -83,6 +89,7 @@ write.table(meta_sep, file = "group_metadata_0.tab", sep ="\t", row.names = FALS
 
 ```{r , echo = FALSE, warning = FALSE, message= FALSE}
 
+#fix some data inconsistencies in coding
 meta_sep$county <- str_to_lower(meta_sep$county)
 meta_sep$county <- str_replace(meta_sep$county, "nassau county", "nassau")
 meta_sep$county <- str_replace(meta_sep$county, "suffolk county", "suffolk")
@@ -110,7 +117,6 @@ us_dates <- left_join(meta_sep, dates, by = "id")
 
 #creating graphs- graph of dates of sequencing for the US
 
-
 ggplot(data = seq_final, aes(x = group, y = mutations, fill = group)) + 
   geom_boxplot(alpha = 0.5) +
   #theme(panel.background = element_blank()) +
@@ -127,13 +133,39 @@ ggplot(data = seq_final, aes(x = group, y = mutations, fill = group)) +
   
 ggsave("mutation_group.jpeg", width = 8, height = 6)
 
-ggplot(data = seq_final, aes(x = date, y = mutations)) +
-  geom_jitter() +
-  geom_smooth(method = lm)
 
-avg_mut <- seq_final %>% 
-  group_by(group) %>% 
-  summarise(mean = mean(mutations))
+#mutations by date for each group
+ggplot(data = seq_final, aes(x = date, y = mutations, color = group)) +
+  geom_jitter() +
+  facet_wrap(~ group)+
+  geom_smooth(method = lm) +
+  scale_colour_brewer(palette="Accent")+
+  theme(legend.position = 'none') +
+        xlab("Sequence Isolation Date") +
+        ylab("Nucleotide Distance from Root") + ggtitle("Single Nucleotide Mutations in Sequences by Date of Isolation") +
+  theme(plot.title = element_text(size = 15)) +
+  theme(axis.text = element_text(size=20)) +
+  theme(axis.title = element_text(size=15)) +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
+
+ggsave("mutation_date.jpeg", width = 8, height = 6)
+
+#mutations for all groups together with one line of best fit
+ggplot(data = seq_final, aes(x = date, y = mutations, color = group, group = 1)) +
+  geom_jitter() +
+  geom_smooth(method = lm) +
+  scale_colour_brewer(palette="Accent")+
+  theme(legend.position = 'none') +
+        xlab("Sequence Isolation Date") +
+        ylab("Nucleotide Distance from Root") + ggtitle("Single Nucleotide Mutations in Sequences by Date of Isolation") +
+  theme(plot.title = element_text(size = 15)) +
+  theme(axis.text = element_text(size=20)) +
+  theme(axis.title = element_text(size=15)) +
+  theme_bw() +
+  theme(plot.title = element_text(hjust = 0.5))
+
+ggsave("mutation_date_total.jpeg", width = 8, height = 6)
 
 '''
 ggplot(data = us_dates, aes(x = date, y = group, fill = group)) +
@@ -156,7 +188,7 @@ col_vector = unlist(mapply(brewer.pal, qual_col_pals$maxcolors, rownames(qual_co
 color = grDevices::colors()[grep('gr(a|e)y', grDevices::colors(), invert = T)]
 
 x_color = c("#D3D3D3","#2BC5D6","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#E02E5C","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#D3D3D3","#475195","#1BA473","#C7D62B","#D3D3D3")
-'''
+
 
 ggplot(data = us_dates, aes(x = date, fill = state)) +
   geom_histogram(binwidth = 5) + facet_wrap(~ group) +
@@ -165,12 +197,11 @@ ggplot(data = us_dates, aes(x = date, fill = state)) +
   theme_bw()+
         xlab("Date of Isolation") +
         ylab("Sequence Count")
-
+'''
 
 #graph of nucleotide differences from the root for mutation calculator
 
-#box and whisker of state grouping
-
+#new column that defines high-count states
 us_dates$States <- ifelse(us_dates$state == "New York" | 
                            us_dates$state == "abroad" |
                           us_dates$state == "Wisconsin" |
@@ -181,10 +212,11 @@ us_dates$States <- ifelse(us_dates$state == "New York" |
 
 x_color = c("#2BC5D6","#E02E5C", "#475195","#1BA473","#C7D62B","#D3D3D3")
 
-#reorder
+#reorder high-count states
 us_dates$States <- factor(us_dates$States, levels = c("abroad", "Wisconsin", "New York",
                                                       "Virginia", "Washington", "Remaining States"))
 
+#graph that displays high-count states among each geographic group
 ggplot(data = us_dates, aes(x = date, fill = States)) +
   geom_histogram(binwidth = 5) + facet_wrap(~ group) +
   #scale_fill_manual(values = c("New York" = "white", "Washington" = "#E08214"))+
